tests/ui/rfcs/rfc-2632-const-trait-impl/assoc-type-const-bound-usage-0.qualified.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/assoc-type-const-bound-usage-0.rs:6:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `Trait::{synthetic#0}: Compat` is not satisfied
  --> $DIR/assoc-type-const-bound-usage-0.rs:21:5
   |
LL |     <T as /* FIXME: ~const */ Trait>::Assoc::func()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Compat` is not implemented for `Trait::{synthetic#0}`
   |
note: required by a bound in `Trait::func`
  --> $DIR/assoc-type-const-bound-usage-0.rs:8:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ required by this bound in `Trait::func`
...
LL |     fn func() -> i32;
   |        ---- required by a bound in this associated function

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
